<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText3_id"
        android:layout_width="210dp"
        android:layout_height="75dp"
        android:hint="@string/editText3_join_game_str"
        app:layout_constraintBottom_toTopOf="@+id/button_join_game_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText2_create_game_id"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:hint="@string/editText2_create_game_str"
        app:layout_constraintBottom_toTopOf="@+id/button_create_game_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_create_game_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_game_str"
        app:layout_constraintBottom_toTopOf="@+id/textView3_join_game_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_join_game_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_join_game_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/textView1_join_game_str"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:text="@string/textView1_create_game_str"
        app:layout_constraintBottom_toTopOf="@+id/editText1_create_game_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2_join_game_str"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:text="@string/textView2_create_game_str"
        app:layout_constraintBottom_toTopOf="@+id/editText2_create_game_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3_join_game_str"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:text="@string/textView3_join_game_str"
        app:layout_constraintBottom_toTopOf="@+id/editText3_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText1_create_game_id"
        android:layout_width="210dp"
        android:layout_height="85dp"
        android:hint="@string/editText1_create_game_str"
        app:layout_constraintBottom_toTopOf="@+id/textView2_join_game_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGroup_id"
        android:layout_width="210dp"
        android:layout_height="75dp"
        android:checkedButton="@id/RadioButton1_id"
        app:layout_constraintBottom_toTopOf="@+id/textView1_join_game_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/RadioButton1_id"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/RadioButton1_str" />

        <RadioButton
            android:id="@+id/RadioButton2_id"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/RadioButton2_str" />

        <RadioButton
            android:id="@+id/RadioButton3_id"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/RadioButton3_str" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>