<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView_adr_game_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_adr_game_str"
        app:layout_constraintBottom_toTopOf="@+id/textView_adr_game_result_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_adr_game_result_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_adr_game_result_str"
        app:layout_constraintBottom_toTopOf="@+id/textView_bet_amount_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_bet_amount_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_bet_amount_str"
        app:layout_constraintBottom_toTopOf="@+id/textView_bet_amount_result_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_bet_amount_result_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_bet_amount_result_str"
        app:layout_constraintBottom_toTopOf="@+id/textView_choice_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_choice_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_choice_str"
        app:layout_constraintBottom_toTopOf="@+id/textView_choice_result_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_choice_result_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_choice_result_str"
        app:layout_constraintBottom_toTopOf="@+id/button_finish_game_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_finish_game_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_finish_game_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_finish_result_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_finish_result_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_finish_game_id" />
</androidx.constraintlayout.widget.ConstraintLayout>